--- a/ansible/roles/authelia/vars/main.yml
+++ b/ansible/roles/authelia/vars/main.yml
@@ -1,18 +1,18 @@
 authelia_app_name: "{{ ansible_role_name }}"
 authelia_pod_name: "{{ evilwoods_container_name_prefix }}{{ authelia_app_name }}"
-authelia_pod_file: "{{ authelia_app_name }}.pod"
+authelia_pod_quadlet: "{{ authelia_app_name }}.pod"
 authelia_container_name: "{{ evilwoods_container_name_prefix }}-{{ evilwoods_authelia_app_name }}"
-authelia_container_file: "{{ authelia_app_name}}-server.container"
+authelia_container_quadlet: "{{ authelia_app_name }}-server.container"
 authelia_service_name: "{{ authelia_app_name }}-pod"
 authelia_url: "auth.{{ evilwoods_domain_name }}"
 authelia_get_secrets_service_name: "{{ authelia_app_name }}-get-secrets"
 authelia_get_secrets_script_name: "{{ authelia_get_secrets_service_name }}.sh"
 
 authelia_volume_path: "{{ evilwoods_unnamed_volumes }}/{{ authelia_app_name }}"
-authelia_valkey_container_name: "{{ evilwoods_container_name_prefix }}{{ authelia_app_name }}-valkey"
-authelia_valkey_container_file: "{{ authelia_app_name }}-valkey.container"
-authelia_valkey_data_volume_name: "{{ evilwoods_container_name_prefix }}{{ authelia_app_name }}-valkey-data"
-authelia_valkey_data_volume_file: "{{ authelia_valkey_data_volume_name }}.volume"
+authelia_valkey_container_name: "{{ evilwoods_container_name_prefix }}{{ authelia_valkey_container_quadlet | splitext | first }}"
+authelia_valkey_container_quadlet: "{{ authelia_app_name }}-valkey.container"
+authelia_valkey_data_volume_quadlet: "{{ authelia_app_name }}valkey-data.volume"
+authelia_valkey_data_volume_name: "{{ evilwoods_container_name_prefix }}{{ authelia_valkey_data_volume_quadlet | splitext | first }}"
 
 authelia_image: "docker.io/authelia/authelia:4.39"
 authelia_valkey_image: "docker.io/valkey/valkey:8.1-alpine"
