--- a/ansible/roles/caddy/vars/main.yml
+++ b/ansible/roles/caddy/vars/main.yml
@@ -6,5 +6,5 @@ caddy_acme_server: https://acme-v02.api.letsencrypt.org/directory
 caddy_acme_server_staging: https://acme-staging-v02.api.letsencrypt.org/directory
 
 caddy_image: "docker.io/library/caddy:2.9"
-caddy_data_volume_filename: "{{ caddy_app_name }}-data"
-caddy_data_volume_name: "{{ evilwoods_container_name_prefix }}{{ caddy_data_volume_filename }}"
+caddy_data_volume_quadlet: "{{ caddy_app_name }}-data.volume"
+caddy_data_volume_name: "{{ evilwoods_container_name_prefix }}{{ caddy_data_volume_quadlet | splitext | first }}"
