--- a/ansible/roles/ntfy/vars/main.yml
+++ b/ansible/roles/ntfy/vars/main.yml
@@ -1,4 +1,4 @@
 ntfy_app_name: "{{ ansible_role_name }}"
-ntfy_container_name: "{{ evilwoods_container_name_prefix }}-{{ ntfy_app_name }}"
+ntfy_container_name: "{{ evilwoods_container_name_prefix }}{{ ntfy_app_name }}"
 ntfy_image: "docker.io/binwiederhier/ntfy:v2.12.0"
 ntfy_url: "{{ ntfy_app_name }}.{{ evilwoods_domain_name }}"
