--- a/ansible/roles/searxng/vars/main.yml
+++ b/ansible/roles/searxng/vars/main.yml
@@ -7,3 +7,4 @@ searxng_valkey_image: "docker.io/valkey/valkey:8.1-alpine"
 searxng_port: "{{ Evilwoods_server_port }}"
 searxng_volume_path: "{{ evilwoods_unnamed_volumes }}/{{ searxng_app_name }}"
 searxng_url: "search.{{ evilwoods_domain_name }}"
+searxng_jwt_secret_name: "{{ searxng_app_name }}_jwt_secret"
