--- a/ansible/roles/caddy/tasks/main.yml
+++ b/ansible/roles/caddy/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: "Create configuration directory for {{ caddy_app_name | upper }}"
   ansible.builtin.file:
-    path: "{{ evilwoods_caddy_service_config_path }}"
+    path: "{{ evilwoods_caddy_service_config }}"
     state: directory
     mode: "0755"
 
@@ -38,7 +38,7 @@
     network: "{{ evilwoods_container_network_file }}"
     volumes:
       - "{{ evilwoods_caddy_config_volume }}:/etc/caddy:Z"
-      - "{{ caddy_data_volume_quadlet }}:/data:Z"
+      - "{{ caddy_data_volume_quadlet }}:/data"
     publish:
       - "8080:80"
       - "8443:443"
