--- a/ansible/roles/searxng/vars/main.yml
+++ b/ansible/roles/searxng/vars/main.yml
@@ -1,10 +1,18 @@
 searxng_app_name: "{{ ansible_role_name }}"
-searxng_pod_name: "{{ evilwoods_container_name_prefix }}-{{ searxng_app_name }}"
+searxng_pod_name: "{{ evilwoods_container_name_prefix }}{{ searxng_app_name }}"
+searxng_pod_quadlet: "{{ searxng_app_name }}.pod"
+searxng_container_name: "{{ evilwoods_container_name_prefix }}{{ searxng_app_name }}-server"
+searxng_container_quadlet: "{{ searxng_app_name }}-server.container"
 searxng_service_name: "{{ searxng_app_name }}"
-searxng_valkey_name: "{{ evilwoods_container_name_prefix }}-{{ searxng_app_name }}-valkey"
+searxng_valkey_container_name: "{{ evilwoods_container_name_prefix }}{{ searxng_app_name }}-valkey"
+searxng_valkey_container_quadlet: "{{ searxng_app_name }}-valkey.container"
+searxng_valkey_data_volume_name: "{{ evilwoods_container_name_prefix }}{{ searxng_app_name }}-valkey-data"
+searxng_valkey_data_volume_quadlet: "{{ searxng_app_name }}-valkey-data.volume"
+searxng_data_d: "{{ evilwoods_service_data_storage }}/{{ searxng_app_name }}"
+searxng_volume_d: "{{ searxng_data_d }}/volumes"
+searxng_config_volume: "{{ searxng_volume_d }}/config"
 searxng_image: "docker.io/searxng/searxng:latest"
 searxng_valkey_image: "docker.io/valkey/valkey:8.1-alpine"
 searxng_port: "{{ Evilwoods_server_port }}"
-searxng_volume_path: "{{ evilwoods_unnamed_volumes }}/{{ searxng_app_name }}"
 searxng_url: "search.{{ evilwoods_domain_name }}"
 searxng_jwt_secret_name: "{{ searxng_app_name }}_jwt_secret"
