--- a/ansible/roles/authelia/vars/main.yml
+++ b/ansible/roles/authelia/vars/main.yml
@@ -4,14 +4,13 @@ authelia_pod_quadlet: "{{ authelia_app_name }}.pod"
 authelia_container_name: "{{ evilwoods_container_name_prefix }}-{{ evilwoods_authelia_app_name }}"
 authelia_container_quadlet: "{{ authelia_app_name }}-server.container"
 authelia_service_name: "{{ authelia_app_name }}-pod"
-authelia_url: "auth.{{ evilwoods_domain_name }}"
-authelia_get_secrets_service_name: "{{ authelia_app_name }}-get-secrets"
-authelia_get_secrets_script_name: "{{ authelia_get_secrets_service_name }}.sh"
+authelia_url: "{{ evilwoods_authelia_url }}"
+authelia_get_secrets_script: "{{ authelia_app_name }}-get-secrets.sh"
 
 authelia_volume_path: "{{ evilwoods_unnamed_volumes }}/{{ authelia_app_name }}"
 authelia_valkey_container_name: "{{ evilwoods_container_name_prefix }}{{ authelia_valkey_container_quadlet | splitext | first }}"
 authelia_valkey_container_quadlet: "{{ authelia_app_name }}-valkey.container"
-authelia_valkey_data_volume_quadlet: "{{ authelia_app_name }}valkey-data.volume"
+authelia_valkey_data_volume_quadlet: "{{ authelia_app_name }}-valkey-data.volume"
 authelia_valkey_data_volume_name: "{{ evilwoods_container_name_prefix }}{{ authelia_valkey_data_volume_quadlet | splitext | first }}"
 
 authelia_image: "docker.io/authelia/authelia:4.39"
@@ -23,8 +22,11 @@ authelia_oidc_hmac_secret_name: "{{ authelia_app_name }}_oidc_hmac_secret"
 authelia_oidc_jwks_private_key_name: "{{ authelia_app_name }}_oidc_jwks_private_key"
 
 # TODO put conpig files into subdirectory (config.d or something else). Adapt the whole role
-authelia_config_volume: "{{ authelia_volume_path }}/config"
+authelia_data: "{{ evilwoods_authelia_data }}"
+authelia_volume_dir: "{{ evilwoods_authelia_volume_dir }}"
+authelia_script_dir: "{{ authelia_data }}/scripts"
+authelia_config_volume: "{{ evilwoods_authelia_config_volume }}"
 authelia_userdb_file: "user-database.yml"
 
 authelia_env_filename: "env"
-authelia_env_file: "{{ authelia_volume_path }}/{{ authelia_env_filename }}"
+authelia_env_file: "{{ authelia_data }}/{{ authelia_env_filename }}"
