--- a/ansible/roles/kitchenowl/vars/main.yml
+++ b/ansible/roles/kitchenowl/vars/main.yml
@@ -1,13 +1,16 @@
 kitchenowl_app_name: "{{ ansible_role_name }}"
-kitchenowl_container_name: "{{ evilwoods_container_name_prefix }}-{{ kitchenowl_app_name }}"
+kitchenowl_container_quadlet: "{{ kitchenowl_app_name }}.container"
+kitchenowl_container_name: "{{ evilwoods_container_name_prefix }}{{ kitchenowl_app_name }}"
 kitchenowl_image: "docker.io/tombursch/kitchenowl:v0.6.15"
-kitchenowl_data_volume: "kitchenowl-data.volume"
-kitchenowl_volume_path: "{{ evilwoods_unnamed_volumes }}/{{ kitchenowl_app_name }}"
+kitchenowl_data: "{{ evilwoods_service_data_storage }}/{{ kitchenowl_app_name }}"
+kitchenowl_volume_dir: "{{ kitchenowl_data }}/volumes"
+kitchenowl_data_volume: "{{ kitchenowl_volume_dir }}/data"
+kitchenowl_script_dir: "{{ kitchenowl_data }}/scripts"
 kitchenowl_url: "{{ kitchenowl_app_name }}.{{ evilwoods_domain_name }}"
 kitchenowl_jwt_secret_name: "{{ kitchenowl_app_name }}_jwt_secret"
 
-kitchenowl_get_secret_script_name: "{{ kitchenowl_app_name }}_get_secrets.sh"
-kitchenowl_get_secrets_script: "{{ kitchenowl_volume_path }}/{{ kitchenowl_get_secret_script_name }}"
+kitchenowl_get_secrets_script_name: "{{ kitchenowl_app_name }}-get-secrets.sh"
+kitchenowl_get_secrets_script: "{{ kitchenowl_script_dir }}/{{ kitchenowl_get_secrets_script_name }}"
 
 kitchenowl_oidc_client_name: "{{ kitchenowl_app_name }}_oidc_client_id"
 kitchenowl_oidc_client_secret_name: "{{ kitchenowl_app_name }}_oidc_client_secret"
