--- a/ansible/group_vars/evilwoods/authelia.yml
+++ b/ansible/group_vars/evilwoods/authelia.yml
@@ -5,3 +5,4 @@ evilwoods_authelia_quadlet_overrides_path: "{{ evilwoods_quadlet_path }}/autheli
 evilwoods_authelia_data: "{{ evilwoods_service_data_storage }}/{{ evilwoods_authelia_app_name }}"
 evilwoods_authelia_volume_dir: "{{ evilwoods_authelia_data }}/volumes"
 evilwoods_authelia_config_volume: "{{ evilwoods_authelia_volume_dir }}/config"
+evilwoods_authelia_config_dir: "{{ evilwoods_authelia_config_volume }}/configuration"
