--- a/ansible/roles/actual/vars/main.yml
+++ b/ansible/roles/actual/vars/main.yml
@@ -1,8 +1,16 @@
 actual_app_name: "actual"
 actual_container_name: "{{ evilwoods_container_name_prefix }}{{ actual_app_name }}"
-actual_image: "docker.io/actualbudget/actual-server:25.5.0-alpine"
+actual_image: "docker.io/actualbudget/actual-server:25.6.1-alpine"
 # actual_data_volume: "{{ evilwoods_unnamed_volumes }}/{{ actual_app_name }}/data"
-actual_data_volume_name: "{{ evilwoods_container_name_prefix }}{{ actual_app_name }}-data"
-actual_data_volume_file: "{{ actual_app_name }}-data.volume"
+actual_data_dir: "{{ evilwoods_service_data_storage }}/{{ actual_app_name }}"
+actual_volume_dir: "{{ actual_data_dir }}/volumes"
+actual_data_volume: "{{ actual_volume_dir }}/data"
+actual_script_dir: "{{ actual_data_dir }}/scripts"
 actual_url: "{{ actual_app_name }}.{{ evilwoods_domain_name }}"
 actual_caddy_file: "{{ actual_app_name }}.caddyfile"
+actual_script_file: "actual-get-secrets.sh"
+actual_env_file: "actual.env"
+
+actual_oidc_client_id_name: "{{ actual_app_name }}_oidc_client_id"
+actual_oidc_client_secret_name: "{{ actual_app_name }}_oidc_client_secret"
+actual_oidc_client_secret_hash_name: "{{ actual_app_name }}_oidc_client_secret_hash"
