--- a/ansible/roles/crunner/tasks/main.yml
+++ b/ansible/roles/crunner/tasks/main.yml
@@ -33,3 +33,7 @@
     mode: "0644"
   when: not linger_check.stat.exists
   notify: Reboot the host
+
+- name: Reboot the host
+  ansible.builtin.reboot:
+    reboot_timeout: 300
